--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
 	</parent>
 	<groupId>com.app</groupId>
 	<artifactId>Unit</artifactId>
+	<packaging>war</packaging>
 	<version>0.0.1-SNAPSHOT</version>
 	<name>Unit</name>
 	<description>Demo project for Spring Boot</description>
